--- a/Accord/Podfile
+++ b/Accord/Podfile
@@ -8,5 +8,7 @@ target 'Accord' do
   # Pods for Accord
   
   pod 'Firebase/Analytics'
+  pod 'Firebase/Firestore'
+  pod 'FirebaseFirestoreSwift'
   
 end
